# Lem_in

./: CMakeLists.txt  algo_array_of_rooms.c  algo_calc_input_output.c  algo_check_from_end_sort_childs_of_end.c  algo_del_child.c  algo_input_fork.c  algo_move_ants.c  algo_prepare.c  algo_search_path.c  bfs.c  comments.c  create_and_fill_data.c  free.c  free_add.c  ft_atoi.c  ft_isdigit.c  ft_lstnew.c  ft_memcpy.c  ft_strchr.c  ft_strcmp.c  ft_strjoin.c  ft_strlen.c  ft_strsub.c  get_next_line.c  main.c  mapp  print.c  search_path.c  validator.c  validator.h  validator_free.c  validator_get_coordinates.c  validator_links.c  validator_rooms.c
